--- a/ihgPortfolio/angular.json
+++ b/ihgPortfolio/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular.io-example": {
+    "ihgPortfolio": {
       "projectType": "application",
       "root": "",
       "sourceRoot": "src",
